tdf#90816: sw: fix bookmark loss in SwUndoDelete

_DelBookmarks() will actually delete marks that exactly match both start
and end position of the range, so restrict the call to only the
fully-deleted nodes that will be moved to the Undo-array.

(regression from 370febbf19a5f362394d1c9e69b12dcb218f6501)

Change-Id: Icf5097774aa55ee152a1e20c0c7264330955c615